updated email link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1 class="text-light"><a href="index.html">William Ryder</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/willryder/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="weryder@uci.edu" class="gmail"><i class="bx bxl-gmail"></i></a>
+          <a href="mailto:weryder@uci.edu" class="gmail"><i class="bx bxl-gmail"></i></a>
         </div>
       </div>
 
